# SVector

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Contributing.md  README.md  build_testing.sh  compile.sh  compile_commands.json  debug.txt  makefile
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: c_test.yaml
header/: vector.hpp
implementation/: implementation.cpp  reverse.cpp
testing/: testing.cpp
